Support for set ban all users for emojii. This is temporary fix, because telegram does not send join chat messages.
