# openapi.yml
@@ -106,6 +106,11 @@ components:
           $ref: '#/components/schemas/Questions'
         ignore_domains:
           $ref: '#/components/schemas/Domains'
+        ban_emojii_count:
+          type: integer
+          format: int32
+          minimum: 0
+          maximum: 10
 
     Domains:
       type: array
